rip out notifications settings pane

--- a/internal/projects/bulleit/Stamped/SettingsViewController.xib
+++ b/internal/projects/bulleit/Stamped/SettingsViewController.xib
@@ -101,7 +101,7 @@
 								<string key="NSFrame">{{5, 48}, {310, 48}}</string>
 								<reference key="NSSuperview" ref="726625627"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="319612054"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:222</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="620266313">
 									<int key="NSColorSpace">3</int>
@@ -143,40 +143,10 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="319612054">
-								<reference key="NSNextResponder" ref="726625627"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{5, 95}, {310, 49}}</string>
-								<reference key="NSSuperview" ref="726625627"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="271798249"/>
-								<string key="NSReuseIdentifierKey">_NS:222</string>
-								<reference key="IBUIBackgroundColor" ref="620266313"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<double key="IBUITitleEdgeInsets.top">0.0</double>
-								<double key="IBUITitleEdgeInsets.bottom">0.0</double>
-								<double key="IBUITitleEdgeInsets.left">15</double>
-								<double key="IBUITitleEdgeInsets.right">0.0</double>
-								<string key="IBUINormalTitle">Notification settings</string>
-								<reference key="IBUIHighlightedTitleColor" ref="136463241"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC4zAA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="361466754"/>
-								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">settings_arrow_middle_button_bg@2x.png</string>
-								</object>
-								<reference key="IBUIFontDescription" ref="564974095"/>
-								<reference key="IBUIFont" ref="154266804"/>
-							</object>
 							<object class="IBUIButton" id="271798249">
 								<reference key="NSNextResponder" ref="726625627"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{5, 143}, {310, 50}}</string>
+								<string key="NSFrame">{{5, 95}, {310, 50}}</string>
 								<reference key="NSSuperview" ref="726625627"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="115673777"/>
@@ -206,7 +176,7 @@
 							<object class="IBUILabel" id="115673777">
 								<reference key="NSNextResponder" ref="726625627"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 217}, {96, 26}}</string>
+								<string key="NSFrame">{{20, 169}, {96, 26}}</string>
 								<reference key="NSSuperview" ref="726625627"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="596080103"/>
@@ -230,7 +200,7 @@
 							<object class="IBUIButton" id="596080103">
 								<reference key="NSNextResponder" ref="726625627"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{5, 251}, {310, 48}}</string>
+								<string key="NSFrame">{{5, 203}, {310, 48}}</string>
 								<reference key="NSSuperview" ref="726625627"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="405221559"/>
@@ -263,7 +233,7 @@
 							<object class="IBUIButton" id="405221559">
 								<reference key="NSNextResponder" ref="726625627"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{5, 298}, {310, 50}}</string>
+								<string key="NSFrame">{{5, 250}, {310, 50}}</string>
 								<reference key="NSSuperview" ref="726625627"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="590627846"/>
@@ -287,7 +257,7 @@
 							<object class="IBUIButton" id="590627846">
 								<reference key="NSNextResponder" ref="726625627"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{5, 375}, {310, 48}}</string>
+								<string key="NSFrame">{{5, 327}, {310, 48}}</string>
 								<reference key="NSSuperview" ref="726625627"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="357136388"/>
@@ -314,7 +284,7 @@
 							<object class="IBUIButton" id="357136388">
 								<reference key="NSNextResponder" ref="726625627"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{5, 422}, {310, 50}}</string>
+								<string key="NSFrame">{{5, 374}, {310, 50}}</string>
 								<reference key="NSSuperview" ref="726625627"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:222</string>
@@ -478,15 +448,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">notificationsButtonPressed:</string>
-						<reference key="source" ref="319612054"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">40</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">logoutButtonPressed:</string>
 						<reference key="source" ref="357136388"/>
 						<reference key="destination" ref="372490531"/>
@@ -557,7 +518,6 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="101782225"/>
-							<reference ref="319612054"/>
 							<reference ref="271798249"/>
 							<reference ref="115673777"/>
 							<reference ref="596080103"/>
@@ -571,11 +531,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
 						<reference key="object" ref="101782225"/>
-						<reference key="parent" ref="726625627"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">23</int>
-						<reference key="object" ref="319612054"/>
 						<reference key="parent" ref="726625627"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -628,8 +583,6 @@
 					<string>19.IBPluginDependency</string>
 					<string>22.IBPluginDependency</string>
 					<string>22.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
-					<string>23.IBPluginDependency</string>
-					<string>23.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
 					<string>25.IBPluginDependency</string>
 					<string>25.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
 					<string>28.IBPluginDependency</string>
@@ -655,8 +608,6 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -703,12 +654,10 @@
 							<string>doneButtonPressed:</string>
 							<string>editProfileButtonPressed:</string>
 							<string>logoutButtonPressed:</string>
-							<string>notificationsButtonPressed:</string>
 							<string>sharingButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -722,7 +671,6 @@
 							<string>doneButtonPressed:</string>
 							<string>editProfileButtonPressed:</string>
 							<string>logoutButtonPressed:</string>
-							<string>notificationsButtonPressed:</string>
 							<string>sharingButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -737,10 +685,6 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">logoutButtonPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">notificationsButtonPressed:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -782,7 +726,6 @@
 				<string>blue_button_background.png</string>
 				<string>gradient_background.png</string>
 				<string>settings_arrow_bottom_button_bg@2x.png</string>
-				<string>settings_arrow_middle_button_bg@2x.png</string>
 				<string>settings_arrow_top_button_bg@2x.png</string>
 				<string>settings_bottom_button_bg@2x.png</string>
 				<string>settings_label@2x.png</string>
@@ -794,7 +737,6 @@
 				<string>{16, 16}</string>
 				<string>{320, 480}</string>
 				<string>{620, 100}</string>
-				<string>{620, 98}</string>
 				<string>{620, 96}</string>
 				<string>{620, 100}</string>
 				<string>{156, 40}</string>
